--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ body {
   margin-bottom: 25px;
 }
 .bakckground-modal {
+  font-size: 13px;
   position: fixed;
   inset: 0;
   margin: auto;
@@ -252,16 +253,13 @@ body {
   z-index: 11111;
 }
 .modal {
-  width: 37.5em;
-  height: 43.75em;
+  width: 60em;
+  padding: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+  row-gap: 1.1em;
   color: #fff;
   border-radius: 15px;
   background: #f1f1f1;
@@ -278,35 +276,49 @@ body {
   visibility: visible;
 }
 .modal__title {
-  font-size: 4em;
-  padding-bottom: 10px;
+  font-size: 3.85em;
+  padding-bottom: 0.15em;
   background-image: linear-gradient(to right, #3249c1, #3d5af1);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  letter-spacing: 1px;
+}
+.modal__sub-title {
+  font-size: 2.5em;
+  text-align: start;
+  padding-bottom: 0.55em;
+  color: #000;
 }
 .modal__lista {
+  text-align: start;
   list-style: none;
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  row-gap: 17px;
+  padding-left: 0;
+  margin-top: 6px;
+}
+.modal__tec {
+  text-align: start;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  row-gap: 20px;
-  padding-left: 0;
-}
-.modal__tec {
   font-weight: 500;
-  font-size: 2em;
+  font-size: 2.1em;
   letter-spacing: 1px;
   color: #000;
 }
+.modal__tec span {
+  margin-right: 2px;
+}
 .modal__btn {
-  font-size: 19px;
+  font-size: 18px;
   color: #fff;
   border: none;
-  padding: 12px 60px;
-  margin-top: 25px;
+  padding: 0.75em 3.8em;
+  margin-top: 15px;
   background-image: linear-gradient(to right, #3249c1, #3d5af1);
   cursor: pointer;
 }
@@ -376,10 +388,6 @@ body {
 }
 .services__information__view-more:hover::after {
   margin-left: 20px;
-}
-.technologies {
-  font-size: 1.75rem;
-  text-align: start;
 }
 .projects {
   padding: 100px 50px 0;
@@ -570,11 +578,11 @@ body {
   left: 50%;
   width: 5px;
   height: 5px;
-  background-color: #ffffffb4;
+  background-color: rgba(255, 255, 255, 0.7);
   border-radius: 50%;
-  box-shadow: 0 0 6px rgba(255, 255, 255, 0.527),
-    0 0 12px rgba(255, 255, 255, 0.719), 0 0 30px rgb(255, 0, 0);
-  animation: stars 4s linear 1s infinite;
+  box-shadow: 0 0 4px 1px rgba(255, 255, 255, 0.55),
+    0 0 10px 4px rgba(255, 255, 255, 0.25), 0 0 17px 7px rgba(255, 84, 98, 0.15);
+  animation: stars 4s linear infinite;
   transition: 0.6s;
 }
 .star::before {
@@ -582,9 +590,9 @@ body {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 340px;
+  width: 400px;
   height: 1px;
-  background-image: linear-gradient(90deg, #fffafa, transparent);
+  background-image: linear-gradient(90deg, #ffffffca, transparent);
 }
 @keyframes stars {
   0% {
@@ -603,43 +611,43 @@ body {
   top: -1em;
   right: 42em;
   left: initial;
-  animation-delay: 5s;
-  animation-duration: 16s;
+  animation-delay: 4s;
+  animation-duration: 19s;
 }
 .star2 {
   top: -1em;
   right: 19em;
   left: initial;
-  animation-delay: 9s;
-  animation-duration: 11s;
+  animation-delay: 8s;
+  animation-duration: 14s;
 }
 .star3 {
   top: -1em;
   right: -2.5em;
   left: initial;
-  animation-delay: 2s;
-  animation-duration: 16s;
+  animation-delay: 1s;
+  animation-duration: 19s;
 }
 .star4 {
   top: -1em;
   right: -28.5em;
   left: initial;
-  animation-delay: 4s;
-  animation-duration: 15s;
+  animation-delay: 3s;
+  animation-duration: 18s;
 }
 .star5 {
   top: 53em;
   right: -1em;
   left: initial;
-  animation-delay: 9s;
-  animation-duration: 15.4s;
+  animation-delay: 8s;
+  animation-duration: 17s;
 }
 .star6 {
   top: 90em;
   right: -1em;
   left: initial;
   animation-delay: 9s;
-  animation-duration: 13s;
+  animation-duration: 16s;
 }
 .btn-responsive {
   display: none;
@@ -673,12 +681,6 @@ body {
     -webkit-box-reflect: below 2px
       linear-gradient(transparent, transparent, transparent, #04060f25);
   }
-  .bakckground-modal {
-    font-size: 12px;
-  }
-  .modal__lista {
-    row-gap: 15px;
-  }
 }
 @media (max-width: 785px) {
   .nav {
@@ -703,6 +705,15 @@ body {
   .home__container-img__img {
     width: 270px;
     height: 290px;
+  }
+  .bakckground-modal {
+    font-size: 10px;
+  }
+  .modal {
+    max-width: 38em;
+  }
+  .modal__btn {
+    font-size: 16px;
   }
 }
 @media (max-width: 660px) {
@@ -767,13 +778,6 @@ body {
     font-size: 3.1em;
     line-height: 43px;
   }
-  .bakckground-modal {
-    font-size: 10px;
-  }
-  .modal {
-    max-width: 36.5em;
-    height: 50em;
-  }
   .services__information {
     font-size: 14px;
   }
@@ -805,6 +809,9 @@ body {
   }
   .titles::after {
     width: 124px;
+  }
+  .bakckground-modal {
+    font-size: 8px;
   }
   .services__information {
     font-size: 12px;
@@ -867,8 +874,8 @@ body {
   .home__title.h2 {
     font-size: 2.1em;
   }
-  .bakckground-modal {
-    font-size: 9px;
+  .modal__lista {
+    row-gap: 15px;
   }
   .projects__grid {
     grid-template-columns: 310px;
