--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 35px 75px;
+  padding: 35px 80px;
   transition: 0.6s;
   z-index: 10000;
   animation: navbar 1.1s ease-in;
@@ -76,15 +76,15 @@ body {
   text-decoration: none;
   padding: 7px 26px;
   border-radius: 40px;
-  transition: background-color 0.4s;
+  transition: 0.4s;
 }
 .active,
 .nav__menu__a:hover {
   background-color: var(--colorSecondary);
+  box-shadow: 0px 71px 80px rgba(30, 112, 255, 0.08), 0px 32.8255px 36.9864px rgba(30, 112, 255, 0.059334), 0px 18.782px 21.1628px rgba(30, 112, 255, 0.0501425), 0px 11.4005px 12.8457px rgba(30, 112, 255, 0.0431959), 0px 6.86932px 7.74008px rgba(30, 112, 255, 0.0368041), 0px 3.82528px 4.31018px rgba(30, 112, 255, 0.0298575), 0px 1.64523px 1.85378px rgba(30, 112, 255, 0.020666);
 }
 .sticky {
   background-color: rgba(0, 0, 0, 0.85);
-  box-shadow: 0 0 5px 0 #0f0f0f;
   backdrop-filter: blur(1px);
   padding: 8px 60px;
 }
@@ -95,8 +95,8 @@ body {
   align-items: center;
   justify-content: space-around;
   padding-top: 10px;
-  background-color: rgb(16, 22, 56);
-  background: radial-gradient(50% 50% at 50% 50%, #101638 0%, #000000 100%);
+  background-color: #00041a;
+  background-image: radial-gradient(50% 50% at 50% 50%, #101634 4.17%, #000109 100%);
 }
 .home::after {
   content: "";
@@ -179,8 +179,7 @@ body {
 }
 .home__container-img__img {
   position: relative;
-  width: 425px;
-  height: 500px;
+  height: 535px;
 }
 .home__container-img::before {
   content: "";
@@ -191,7 +190,7 @@ body {
   background-image: linear-gradient(to right, #3249c1, #3d5af1);
   border-radius: 73% 27% 46% 54% / 74% 39% 61% 26% ;
   filter: blur(25px);
-  opacity: 0.15;
+  opacity: 0.09;
 }
 .services {
   position: relative;
@@ -251,15 +250,15 @@ body {
   z-index: 11111;
 }
 .modal {
-  width: 60em;
-  padding: 40px;
+  width: 60.2em;
+  padding: 42px;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   row-gap: 1.1em;
   color: #fff;
-  border-radius: 15px;
+  border-radius: 18px;
   background: #f1f1f1;
   text-align: center;
   z-index: 1000;
@@ -385,7 +384,7 @@ body {
   color: rgb(216, 216, 216);
 }
 .services__information__view-more:hover::after {
-  margin-left: 20px;
+  margin-left: 21px;
 }
 .projects {
   padding: 100px 50px 0;
@@ -456,18 +455,18 @@ body {
 }
 .projects__card__btn {
   font-size: 20px;
-  padding: 15px 47px;
+  padding: 16px 35px;
   background-color: var(--colorPrimary);
   border-radius: 40px;
   text-decoration: none;
   letter-spacing: 0.4px;
   color: #000000;
-  box-shadow: rgb(34 209 238 / 95%) 1px 24px 26px -18px;
+  box-shadow: 0px 33px 36px rgba(34, 209, 238, 0.15), 0px 15.2569px 16.6439px rgba(34, 209, 238, 0.111251), 0px 8.72965px 9.52326px rgba(34, 209, 238, 0.0940171), 0px 5.29883px 5.78055px rgba(34, 209, 238, 0.0809922), 0px 3.19278px 3.48303px rgba(34, 209, 238, 0.0690078), 0px 1.77795px 1.93958px rgba(34, 209, 238, 0.0559829), 0px 0.764683px 0.834199px rgba(34, 209, 238, 0.0387487);
   transition: 0.6s;
 }
 .projects__card__btn:hover {
   background-color: #00f7ff;
-  box-shadow: rgba(0, 247, 255, 0.75) 1px 30px 25px -13px;
+  box-shadow: 0px 36px 36px rgba(34, 226, 238, 0.18), 0px 18.0176px 18.0176px rgba(34, 226, 238, 0.13686), 0px 10.8529px 10.8529px rgba(34, 226, 238, 0.117286), 0px 6.95514px 6.95514px rgba(34, 226, 238, 0.102761), 0px 4.50776px 4.50776px rgba(34, 226, 238, 0.09), 0px 2.83758px 2.83758px rgba(34, 226, 238, 0.0772389), 0px 1.63037px 1.63037px rgba(34, 226, 238, 0.062714), 0px 0.717567px 0.717567px rgba(34, 226, 238, 0.0431401);
 }
 .contact {
   display: flex;
@@ -674,8 +673,7 @@ body {
     line-height: 30px;
   }
   .home__container-img__img {
-    width: 300px;
-    height: 320px;
+    height: 350px;
     -webkit-box-reflect: below 2px
       linear-gradient(transparent, transparent, transparent, #04060f25);
   }
@@ -701,7 +699,6 @@ body {
     margin-top: 13px;
   }
   .home__container-img__img {
-    width: 270px;
     height: 290px;
   }
   .bakckground-modal {
@@ -833,8 +830,9 @@ body {
     font-size: 1.85em;
   }
   .projects__card__btn {
-    font-size: 17px;
-    padding: 13px 25px;
+    font-size: 15px;
+    padding: 13px 24px;
+    margin-top: 5px;
   }
   .contact__window__span {
     font-size: 15px;
