--- a/style.css
+++ b/style.css
@@ -44,11 +44,11 @@ body {
   padding: 35px 80px;
   transition: 0.6s;
   z-index: 10000;
-  animation: navbar 1.1s ease-in;
+  /* animation: navbar 1.1s ease-in;
   visibility: hidden;
-  animation-fill-mode: forwards;
+  animation-fill-mode: forwards; */
 }
-@keyframes navbar {
+/* @keyframes navbar {
   0% {
     transform: translateY(-100px);
     visibility: visible;
@@ -59,7 +59,7 @@ body {
     visibility: visible;
     opacity: 1;
   }
-}
+} */
 .nav__logo {
   height: 65px;
   border-radius: 50%;
@@ -187,6 +187,7 @@ body {
 }
 .home__container-img__img {
   height: 500px;
+  width: 396px;
 }
 .home__container-img::before {
   content: "";
