--- a/style.css
+++ b/style.css
@@ -308,6 +308,7 @@ body {
   font-size: 19px;
   color: #fff;
   border: none;
+  border-radius: 7px;
   padding: 0.75em 3.8em;
   margin-top: 15px;
   background-image: linear-gradient(to right, #3249c1, #3d5af1);
@@ -425,64 +426,65 @@ body {
 }
 .projects__card__title {
   white-space: nowrap;
-  font-size: 2.375em;
+  font-size: 2.2em;
   letter-spacing: 0.5px;
   font-weight: 500;
   color: #fff;
 }
 .projects__card__paragraph {
-  max-width: 350px;
-  font-size: 21px;
+  max-width: 360px;
+  font-size: 20px;
   font-weight: 300;
-  margin: 10px 0 30px;
+  margin: 11px 0 30px;
   line-height: 30px;
   color: var(--colorText);
 }
 .projects__card__btnContainer {
+  width: 100%;
   display: flex;
   align-items: center;
-  width: 100%;
-  justify-content: space-evenly;
+  justify-content: center;
+  column-gap: 15px;
 }
 .projects__card__btn {
   font-size: 16px;
-  padding: 14px 27px;
+  padding: 14px 25px;
   background-color: var(--colorPrimary);
   border-radius: 17px;
   text-decoration: none;
   letter-spacing: 0.4px;
   color: #000;
   box-shadow: 0 33px 36px rgba(34, 200, 238, 0.15),
-    0 15.2569px 16.6439px rgba(34, 200, 238, 0.11),
-    0 8.72965px 9.52326px rgba(34, 200, 238, 0.09),
-    0 5.29883px 5.78055px rgba(34, 200, 238, 0.08),
-    0 3.19278px 3.48303px rgba(34, 200, 238, 0.06),
-    0 1.77795px 1.93958px rgba(34, 200, 238, 0.05),
-    0 0.764683px 0.834199px rgba(34, 200, 238, 0.03);
+    0 15.2px 16.6px rgba(34, 200, 238, 0.11),
+    0 8.7px 9.5px rgba(34, 200, 238, 0.09),
+    0 5.2px 5.7px rgba(34, 200, 238, 0.08),
+    0 3.1px 3.4px rgba(34, 200, 238, 0.06),
+    0 1.7px 1.9px rgba(34, 200, 238, 0.05),
+    0 0.7px 0.8px rgba(34, 200, 238, 0.03);
   transition: 0.6s;
 }
 .projects__card__btn:not(.btn-view-code):hover {
   background-color: #00f7ff;
   box-shadow: 0 36px 36px rgba(34, 226, 238, 0.18),
-    0 18.0176px 18.0176px rgba(34, 226, 238, 0.13),
-    0 10.8529px 10.8529px rgba(34, 226, 238, 0.11),
-    0 6.95514px 6.95514px rgba(34, 226, 238, 0.1),
-    0 4.50776px 4.50776px rgba(34, 226, 238, 0.09),
-    0 2.83758px 2.83758px rgba(34, 226, 238, 0.07),
-    0 1.63037px 1.63037px rgba(34, 226, 238, 0.06),
-    0 0.717567px 0.717567px rgba(34, 226, 238, 0.04);
+    0 18.0px 18px rgba(34, 226, 238, 0.13),
+    0 10.8px 10.8px rgba(34, 226, 238, 0.11),
+    0 6.9px 6.9px rgba(34, 226, 238, 0.1),
+    0 4.5px 4.5px rgba(34, 226, 238, 0.09),
+    0 2.8px 2.8px rgba(34, 226, 238, 0.07),
+    0 1.6px 1.6px rgba(34, 226, 238, 0.06),
+    0 0.7px 0.7px rgba(34, 226, 238, 0.04);
 }
 .btn-view-code {
   outline: 2px solid var(--colorSecondary);
   background: transparent;
   color: #fff;
   box-shadow: 0 33px 36px rgba(34, 92, 238, 0.15),
-    0 15.2569px 16.6439px rgba(34, 92, 238, 0.11),
-    0 8.72965px 9.52326px rgba(34, 92, 238, 0.09),
-    0 5.29883px 5.78055px rgba(34, 92, 238, 0.08),
-    0 3.19278px 3.48303px rgba(34, 92, 238, 0.06),
-    0 1.77795px 1.93958px rgba(34, 92, 238, 0.05),
-    0 0.764683px 0.834199px rgba(34, 92, 238, 0.03);
+    0 15.2px 16.6px rgba(34, 92, 238, 0.11),
+    0 8.7px 9.5px rgba(34, 92, 238, 0.09),
+    0 5.2px 5.7px rgba(34, 92, 238, 0.08),
+    0 3.1px 3.4px rgba(34, 92, 238, 0.06),
+    0 1.7px 1.9px rgba(34, 92, 238, 0.05),
+    0 0.7px 0.8px rgba(34, 92, 238, 0.03);
 }
 .projects__viewMoreProjects {
   color: var(--colorText);
@@ -754,11 +756,8 @@ body {
     padding-left: 8.5%;
     padding-right: 8.5%;
   }
-  .projects__grid {
-    grid-template-columns: 77%;
-  }
 }
-
+  
 @media (max-width: 630px) {
   .nav__menu {
     position: absolute;
@@ -831,20 +830,29 @@ body {
     font-size: 18px;
   }
   .projects__grid {
-    grid-template-columns: 310px;
+    grid-template-columns: 100%
   }
   .projects__card__title {
-    font-size: 1.85em;
+    font-size: 28px;
+    white-space: normal;
+    letter-spacing: normal;
   }
   .projects__card__paragraph {
+    max-width: 334px;
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
   }
+  .projects__card__btnContainer {
+    flex-direction: column;
+  }
   .projects__card__btn {
     font-size: 15px;
     padding: 13px 24px;
-    margin-top: 5px;
+    margin-top: 4px;
+  }
+  .btn-view-code {
+    margin-top: 9px;
   }
   #contact {
     padding-top: 50px;
@@ -912,5 +920,10 @@ body {
   .modal-container {
     font-size: 11px;
   }
-  
+  .projects__img {
+    height: 180px;
+  }
+  .projects__card__paragraph {
+    max-width: 320px;
+  }
 }
