--- a/style.css
+++ b/style.css
@@ -1,38 +1,44 @@
 * {
   box-sizing: border-box;
 }
+
 ::selection {
   background-color: #1d3ee159;
 }
+
 :root {
   --colorSecondary: #3d5af1;
   --colorPrimary: #22d1ee;
   --colorText: #e2f3f5;
   --bg-color: #02030f;
 }
+
 html {
   scroll-behavior: smooth;
 }
+
 body {
   overflow-x: hidden;
   font-family: "Poppins", sans-serif;
 }
+
 ::-webkit-scrollbar {
   width: 8.5px;
 }
+
 ::-webkit-scrollbar-track {
   background: #070707;
 }
+
 ::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(
-    #070707 0%,
-    rgba(61, 91, 241, 0.1) 35%,
-    var(--colorText) 80%,
-    var(--colorText) 100%
-  );
+  background-image: linear-gradient(#070707 0%,
+      rgba(61, 91, 241, 0.1) 35%,
+      var(--colorText) 80%,
+      var(--colorText) 100%);
   border-end-start-radius: 20px;
   border-end-end-radius: 20px;
 }
+
 #navbar {
   position: fixed;
   top: 0;
@@ -44,36 +50,25 @@ body {
   padding: 35px 80px;
   transition: 0.6s;
   z-index: 10000;
-  /* animation: navbar 1.1s ease-in;
-  visibility: hidden;
-  animation-fill-mode: forwards; */
 }
-/* @keyframes navbar {
-  0% {
-    transform: translateY(-100px);
-    visibility: visible;
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0);
-    visibility: visible;
-    opacity: 1;
-  }
-} */
+
 .nav__logo {
   height: 65px;
   border-radius: 50%;
   object-fit: cover;
 }
+
 .nav__menu {
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 50px;
 }
+
 .nav__menu__li {
   list-style: none;
 }
+
 .nav__menu__a {
   font-weight: 300;
   font-size: 1.25em;
@@ -83,6 +78,7 @@ body {
   border-radius: 40px;
   transition: 0.4s;
 }
+
 .active,
 .nav__menu__a:hover {
   background-color: var(--colorSecondary);
@@ -90,11 +86,13 @@ body {
     0px 13.8px 17.9px rgba(30, 112, 255, 0.095),
     0px 62px 80px rgba(30, 112, 255, 0.15);
 }
+
 #navbar.sticky {
   background-color: rgba(0, 0, 0, 0.86);
   backdrop-filter: blur(1px);
   padding: 10px 60px;
 }
+
 #home {
   position: relative;
   min-height: 100vh;
@@ -105,6 +103,7 @@ body {
   background-color: #00041a;
   background: radial-gradient(50% 50% at 50% 50%, #090827 4.17%, #000109 100%);
 }
+
 #home::after {
   content: "";
   width: 100%;
@@ -115,29 +114,35 @@ body {
   background-image: linear-gradient(transparent, #020310);
   z-index: 11;
 }
+
 .home__text {
   position: relative;
   z-index: 2000;
 }
+
 .home__title {
   white-space: nowrap;
   letter-spacing: 1px;
 }
+
 .home__title.h2 {
   font-size: 2.625em;
   color: var(--colorText);
 }
+
 .home__title.h1 {
   font-size: 3.75em;
   margin: 0;
   margin-top: -8px;
   color: var(--colorPrimary);
 }
+
 .home__title.h3 {
   font-size: 1.375em;
   margin-top: -2px;
   color: var(--colorText);
 }
+
 .home__paragraph {
   font-size: 1.375em;
   font-weight: 300;
@@ -148,47 +153,56 @@ body {
   color: var(--colorText);
   line-height: 41px;
 }
+
 .social {
   display: flex;
   justify-content: start;
   align-items: center;
   column-gap: 35px;
 }
+
 .social__a {
   padding: 12px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.06);
   display: flex;
 }
+
 .svg-inline--fa {
   height: 1.57em;
   width: 1.57em;
   color: var(--colorText);
   transition: 0.4s;
 }
+
 .social__a:hover .svg-inline--fa {
   transform: scale(1.105);
   cursor: pointer;
 }
+
 .social__a:hover .fa-github {
   color: #5564eb;
 }
+
 .social__a:hover .fa-twitter {
   color: #00acee;
 }
+
 .social__a:hover .fa-instagram {
   color: #c13584;
 }
+
 .home__container-img {
   position: relative;
   z-index: 100;
-  -webkit-box-reflect: below 0
-    linear-gradient(transparent, transparent, transparent, #0000000a);
+  -webkit-box-reflect: below 0 linear-gradient(transparent, transparent, transparent, #0000000a);
 }
+
 .home__container-img__img {
   height: 500px;
   width: 396px;
 }
+
 .home__container-img::before {
   content: "";
   position: absolute;
@@ -200,6 +214,7 @@ body {
   filter: blur(25px);
   opacity: 0.09;
 }
+
 #services {
   padding-top: 100px;
   min-height: 95vh;
@@ -209,6 +224,7 @@ body {
   flex-direction: column;
   background-color: var(--bg-color);
 }
+
 .subtitle {
   position: relative;
   text-align: center;
@@ -219,6 +235,7 @@ body {
   padding: 20px;
   margin-bottom: 45px;
 }
+
 .subtitle::after {
   content: "";
   position: absolute;
@@ -232,6 +249,7 @@ body {
   border-radius: 5px;
   box-shadow: 0 0 14px #3366ccb5;
 }
+
 .modal-container {
   position: fixed;
   inset: 0;
@@ -240,9 +258,11 @@ body {
   transition: background-color 0.3s;
   z-index: -1;
 }
+
 .modal-container--show {
   z-index: 11111;
 }
+
 .modal {
   margin: auto;
   width: 65%;
@@ -260,11 +280,13 @@ body {
   transform: scale(0.35);
   transition: 0.28s;
 }
+
 .modal--show {
   opacity: 1;
   transform: scale(1);
   visibility: visible;
 }
+
 .modal__title {
   text-align: center;
   font-size: 3em;
@@ -274,12 +296,14 @@ body {
   background-clip: text;
   color: transparent;
 }
+
 .modal__sub-title {
   font-size: 2em;
   text-align: start;
   padding-bottom: 0.55em;
   color: #000;
 }
+
 .modal__lista {
   text-align: start;
   list-style: none;
@@ -291,6 +315,7 @@ body {
   padding-left: 0;
   margin-top: 6px;
 }
+
 .modal__tech {
   text-align: start;
   display: flex;
@@ -301,9 +326,11 @@ body {
   letter-spacing: 1px;
   color: #000;
 }
+
 .modal__tech span {
   margin-right: 2px;
 }
+
 .modal__btn {
   font-size: 19px;
   color: #fff;
@@ -314,6 +341,7 @@ body {
   background-image: linear-gradient(to right, #3249c1, #3d5af1);
   cursor: pointer;
 }
+
 .services__container-flex {
   width: 100%;
   display: flex;
@@ -322,6 +350,7 @@ body {
   flex-wrap: wrap;
   row-gap: 60px;
 }
+
 .services__section {
   display: flex;
   align-items: center;
@@ -329,11 +358,13 @@ body {
   flex-direction: column;
   padding: 20px;
 }
+
 .services__section__img {
   height: 290px;
   margin: 50px 0 32px;
   filter: drop-shadow(0 0 36px #3366cc3f);
 }
+
 .services__section__title {
   text-align: center;
   font-weight: 700;
@@ -342,6 +373,7 @@ body {
   margin-bottom: 11px;
   color: var(--colorPrimary);
 }
+
 .services__section__paragraph {
   max-width: 410px;
   font-weight: 300;
@@ -352,6 +384,7 @@ body {
   color: var(--colorText);
   margin: 0;
 }
+
 .services__section__view-more {
   font-size: 20px;
   text-transform: uppercase;
@@ -362,6 +395,7 @@ body {
   margin-bottom: 20px;
   cursor: pointer;
 }
+
 .services__section__view-more::after {
   content: "➜";
   color: var(--colorSecondary);
@@ -371,12 +405,15 @@ body {
   background-color: rgba(255, 255, 255, 0.044);
   transition: margin-left 0.6s;
 }
+
 .services__section__view-more:hover {
   color: rgb(216, 216, 216);
 }
+
 .services__section__view-more:hover::after {
   margin-left: 21px;
 }
+
 #skills {
   min-height: 80vh;
   display: flex;
@@ -387,6 +424,7 @@ body {
   background-color: var(--bg-color);
   padding: 100px 50px 0;
 }
+
 .skills__lista {
   width: 85%;
   max-width: 1400px;
@@ -399,6 +437,7 @@ body {
   padding: 0;
   margin-top: 50px;
 }
+
 .skills__lista li {
   font-size: 23px;
   display: flex;
@@ -406,10 +445,12 @@ body {
   justify-content: center;
   align-items: center;
 }
+
 .skills__lista img {
   height: 74px;
   margin-bottom: 22px;
 }
+
 #projects {
   padding: 100px 50px 0;
   min-height: 95vh;
@@ -419,6 +460,7 @@ body {
   flex-direction: column;
   background-color: var(--bg-color);
 }
+
 .projects__grid {
   width: 100%;
   display: grid;
@@ -426,8 +468,9 @@ body {
   justify-content: center;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   row-gap: 100px;
-  padding: 40px 0;
+  padding-top: 40px;
 }
+
 .projects__card {
   max-width: 29rem;
   justify-self: center;
@@ -438,25 +481,28 @@ body {
   overflow: hidden;
   background-color: #04050d;
 }
+
 .projects__img {
   width: 100%;
   height: 270px;
   filter: drop-shadow(0 0 37px rgba(203, 209, 221, 0.12));
-  -webkit-box-reflect: below 2px
-    linear-gradient(transparent, transparent, transparent, #04060f28);
+  -webkit-box-reflect: below 2px linear-gradient(transparent, transparent, transparent, #04060f28);
   transition: 0.4s;
 }
+
 .projects__img:hover {
   transform: scale(1.05);
 }
+
 .projects__card__content {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  padding: 30px 20px 64px;
+  padding: 30px 20px 42px;
   text-align: center;
 }
+
 .projects__card__title {
   white-space: nowrap;
   font-size: 2.2em;
@@ -464,6 +510,7 @@ body {
   font-weight: 500;
   color: #fff;
 }
+
 .projects__card__paragraph {
   max-width: 360px;
   font-size: 20px;
@@ -472,6 +519,7 @@ body {
   line-height: 30px;
   color: var(--colorText);
 }
+
 .projects__card__btnContainer {
   width: 100%;
   display: flex;
@@ -479,6 +527,7 @@ body {
   justify-content: center;
   column-gap: 15px;
 }
+
 .projects__card__btn {
   font-size: 16px;
   padding: 14px 25px;
@@ -496,6 +545,7 @@ body {
     0 0.7px 0.8px rgba(34, 200, 238, 0.03);
   transition: 0.6s;
 }
+
 .projects__card__btn:not(.btn-view-code):hover {
   background-color: #00f7ff;
   box-shadow: 0 36px 36px rgba(34, 226, 238, 0.18),
@@ -507,6 +557,7 @@ body {
     0 1.6px 1.6px rgba(34, 226, 238, 0.06),
     0 0.7px 0.7px rgba(34, 226, 238, 0.04);
 }
+
 .btn-view-code {
   outline: 2px solid var(--colorSecondary);
   background: transparent;
@@ -517,12 +568,14 @@ body {
     0 3.1px 3.4px rgba(34, 92, 238, 0.06), 0 1.7px 1.9px rgba(34, 92, 238, 0.05),
     0 0.7px 0.8px rgba(34, 92, 238, 0.03);
 }
+
 .projects__viewMoreProjects {
   color: var(--colorText);
   /* font-size: 30px; */
   text-transform: uppercase;
   text-decoration: underline;
 }
+
 #contact {
   display: flex;
   align-items: center;
@@ -533,10 +586,12 @@ body {
   overflow: hidden;
   background-color: var(--bg-color);
 }
+
 .contact__window {
   position: relative;
   z-index: 101;
 }
+
 .contact__window__span {
   position: fixed;
   right: -12em;
@@ -551,10 +606,13 @@ body {
   transition: 0.6s;
   margin-right: 15%;
 }
+
 .contact__window__span.active {
   animation: emailSend 6.5s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
+
 @keyframes emailSend {
+
   0%,
   95%,
   100% {
@@ -562,6 +620,7 @@ body {
     visibility: hidden;
     opacity: 0;
   }
+
   38%,
   50%,
   75% {
@@ -570,6 +629,7 @@ body {
     opacity: 1;
   }
 }
+
 .contact__form {
   width: 100%;
   font-size: 20px;
@@ -578,6 +638,7 @@ body {
   justify-content: center;
   flex-direction: column;
 }
+
 .contact__form__title {
   margin-top: 18px;
   font-size: 26px;
@@ -585,6 +646,7 @@ body {
   width: 70%;
   color: #f8f8f8;
 }
+
 .contact__input {
   min-width: 70%;
   max-width: 70%;
@@ -596,11 +658,13 @@ body {
   margin-top: 25px;
   border-radius: 7px;
 }
+
 .msg {
   height: 145px;
   min-height: 145px;
   background-color: #f8f8f8;
 }
+
 .contact__send {
   outline: none;
   border: none;
@@ -608,6 +672,7 @@ body {
   padding: 15px 100px;
   border-radius: 7px;
 }
+
 .stars-content {
   position: absolute;
   top: 0;
@@ -617,6 +682,7 @@ body {
   z-index: 100;
   overflow-x: clip;
 }
+
 .star {
   position: absolute;
   top: 50%;
@@ -630,6 +696,7 @@ body {
   animation: stars 4s linear infinite;
   transition: 0.6s;
 }
+
 .star::before {
   content: "";
   position: absolute;
@@ -639,19 +706,23 @@ body {
   height: 1px;
   background-image: linear-gradient(90deg, #ffffffca, transparent);
 }
+
 @keyframes stars {
   0% {
     transform: rotate(315deg) translate(0);
     opacity: 1;
   }
+
   70% {
     opacity: 1;
   }
+
   100% {
     transform: rotate(315deg) translate(-1600px);
     opacity: 0;
   }
 }
+
 .star1 {
   top: -1em;
   right: 42em;
@@ -659,6 +730,7 @@ body {
   animation-delay: 4s;
   animation-duration: 19s;
 }
+
 .star2 {
   top: -1em;
   right: 19em;
@@ -666,6 +738,7 @@ body {
   animation-delay: 8s;
   animation-duration: 14s;
 }
+
 .star3 {
   top: -1em;
   right: -2.5em;
@@ -673,6 +746,7 @@ body {
   animation-delay: 1s;
   animation-duration: 19s;
 }
+
 .star4 {
   top: -1em;
   right: -28.5em;
@@ -680,6 +754,7 @@ body {
   animation-delay: 3s;
   animation-duration: 18s;
 }
+
 .star5 {
   top: 53em;
   right: -1em;
@@ -687,6 +762,7 @@ body {
   animation-delay: 8s;
   animation-duration: 17s;
 }
+
 .star6 {
   top: 90em;
   right: -1em;
@@ -694,6 +770,7 @@ body {
   animation-delay: 9s;
   animation-duration: 16s;
 }
+
 .btn-responsive {
   display: none;
 }
@@ -702,32 +779,38 @@ body {
   #navbar {
     padding: 15px 35px;
   }
+
   .nav__menu {
     column-gap: 25px;
   }
+
   .nav__menu__a {
     padding: 6px 20px;
   }
+
   #home {
     padding: 45px;
     flex-direction: column-reverse;
     justify-content: space-evenly;
   }
+
   .home__text {
     font-size: 14px;
   }
+
   .home__paragraph {
     margin-top: 20px;
     margin-bottom: 19px;
     line-height: 33px;
     max-width: 730px;
   }
+
   .home__container-img__img {
     height: 350px;
     width: auto;
-    -webkit-box-reflect: below 2px
-      linear-gradient(transparent, transparent, transparent, #04060f25);
+    -webkit-box-reflect: below 2px linear-gradient(transparent, transparent, transparent, #04060f25);
   }
+
   .skills__lista img {
     height: 65px;
   }
@@ -737,63 +820,82 @@ body {
   #navbar.sticky {
     padding: 10px 35px;
   }
+
   .nav__logo {
     height: 45px;
   }
+
   .nav__menu {
     column-gap: 10px;
   }
+
   .nav__menu__a {
     font-size: 17px;
   }
+
   .home__text {
     font-size: 12.2px;
   }
+
   .home__paragraph {
     line-height: 26px;
     margin-top: 13px;
   }
+
   .home__title.h1 {
     font-size: 3.1em;
     line-height: 43px;
   }
+
   .home__paragraph {
     font-size: 19px;
   }
+
   .subtitle {
     font-size: 45px;
     margin: 0 0 20px;
   }
+
   .subtitle::after {
     width: 124px;
   }
+
   .services__section {
     font-size: 14px;
   }
+
   .services__section__paragraph {
     max-width: 372px;
   }
+
   .modal-container {
     font-size: 14px;
   }
+
   .modal {
     width: 82%;
     max-width: 395px;
   }
+
   .modal__btn {
     font-size: 16px;
   }
+
   .modal__title {
     font-size: 2.8em;
   }
+
   .skills__lista {
     gap: 35px 45px;
   }
+
   .skills__lista img {
     width: 55px;
     margin-bottom: 5px;
   }
-  #projects, #skills {
+
+  #projects,
+  #skills {
     padding-left: 8.5%;
     padding-right: 8.5%;
   }
@@ -815,20 +917,24 @@ body {
     z-index: -1;
     transition: 0.4s;
   }
+
   .menuResponsive.nav__menu {
     opacity: 1;
     visibility: visible;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.986);
   }
+
   .nav__menu__li {
     margin-left: 0;
   }
+
   .nav__menu__a {
     font-size: 27px;
     letter-spacing: 1px;
     padding: 8px 60px;
   }
+
   .btn-responsive {
     display: flex;
     flex-direction: column;
@@ -838,115 +944,145 @@ body {
     padding: 10px;
     cursor: pointer;
   }
+
   .line {
     border-radius: 1px;
     height: 3.4px;
     width: 30px;
     background-color: #fff;
   }
+
   .line:nth-child(2) {
     width: 27px;
   }
+
   .line:nth-child(3) {
     width: 15.78px;
   }
+
   .home__container-img__img {
     height: 300px;
   }
+
   .home__paragraph {
     font-size: 17px;
   }
+
   .services__section {
     font-size: 12px;
   }
+
   .services__section__img {
     height: 220px;
   }
+
   .services__section__paragraph {
     line-height: 26px;
     max-width: 320px;
     font-size: 16px;
   }
+
   .services__section__view-more {
     font-size: 18px;
   }
+
   .skills__lista li {
     font-size: 17px;
   }
+
   .projects__grid {
     grid-template-columns: 100%;
+    row-gap: 50px;
   }
+
   .projects__card__title {
     font-size: 28px;
     white-space: normal;
     letter-spacing: normal;
   }
+
   .projects__card__paragraph {
     max-width: 334px;
     font-size: 16px;
     line-height: 24px;
     margin-bottom: 20px;
   }
+
   .projects__card__btnContainer {
     flex-direction: column;
   }
+
   .projects__card__btn {
     font-size: 15px;
     padding: 13px 24px;
     margin-top: 4px;
   }
+
   .btn-view-code {
     margin-top: 9px;
   }
+
   #contact {
     padding-top: 50px;
     padding-bottom: 70px;
   }
+
   .contact__window__span {
     font-size: 15px;
     margin-right: 11%;
   }
+
   .contact__form__title {
     font-size: 20px;
     width: 80%;
   }
+
   .contact__input {
     font-size: 18px;
     min-width: 80%;
     max-width: 80%;
   }
+
   .contact__input:not(.msg) {
     min-height: 50px;
     height: 50px;
   }
+
   .contact__send {
     margin-top: 30px;
     padding: 13px 50px;
   }
 }
+
 @media (max-width: 540px) {
   #navbar {
     padding-left: 17px;
     padding-right: 17px;
   }
+
   #navbar.sticky {
     padding: 10px 17px;
   }
+
   #home {
     min-height: 95vh;
     padding-right: 0;
     padding-left: 0;
   }
+
   .home__container-img__img {
     height: 290px;
   }
+
   .home__text {
     font-size: 11px;
     padding: 13px 17px;
   }
+
   .home__title.h2 {
     font-size: 2.1em;
   }
+
   .home__title.h1 {
     line-height: 39px;
     font-size: 2.4em;
@@ -955,22 +1091,28 @@ body {
     white-space: inherit;
     line-height: 23px;
   }
+
   .home__title.h3 {
     font-size: 17px;
   }
+
   .home__paragraph {
     letter-spacing: 0;
   }
+
   .modal-container {
     font-size: 11px;
   }
+
   .skills__lista img {
     height: 50px;
     width: 50px;
   }
+
   .projects__img {
     height: 180px;
   }
+
   .projects__card__paragraph {
     max-width: 320px;
   }
