--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ body {
   background-color: var(--bg-color);
 }
 
-.subtitle {
+.title {
   position: relative;
   text-align: center;
   font-size: 65px;
@@ -225,7 +225,7 @@ body {
   margin-bottom: 45px;
 }
 
-.subtitle::after {
+.title::after {
   content: "";
   position: absolute;
   left: 0;
@@ -403,43 +403,6 @@ body {
   margin-left: 21px;
 }
 
-#skills {
-  min-height: 80vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: var(--colorText);
-  background-color: var(--bg-color);
-  padding: 100px 50px 0;
-}
-
-.skills__lista {
-  width: 85%;
-  max-width: 1400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 80px 95px;
-  list-style: none;
-  padding: 0;
-  margin-top: 50px;
-}
-
-.skills__lista li {
-  font-size: 23px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.skills__lista img {
-  height: 74px;
-  margin-bottom: 22px;
-}
-
 #projects {
   padding: 100px 50px 0;
   min-height: 95vh;
@@ -468,12 +431,12 @@ body {
   justify-content: center;
   flex-direction: column;
   overflow: hidden;
-  background-color: #04050d;
+  border-radius: 15px;
 }
 
 .projects__img {
   width: 100%;
-  height: 270px;
+  height: 283px;
   filter: drop-shadow(0 0 37px rgba(203, 209, 221, 0.12));
   -webkit-box-reflect: below 2px linear-gradient(transparent, transparent, transparent, #04060f28);
   transition: 0.4s;
@@ -557,6 +520,57 @@ body {
   text-decoration: underline;
 }
 
+#skills {
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--colorText);
+  background-color: var(--bg-color);
+  padding: 100px 50px 0;
+}
+.skills h3 {
+  font-weight: 600;
+}
+.skills__container {
+  width: 100%;
+  max-width: 1400px;
+  border-radius: 15px;
+}
+.skills__lista {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 22px;
+  list-style: none;
+  padding: 0;
+}
+
+.skills__lista li {
+  width: 220px;
+  font-size: 21px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #3f3c53;
+  padding: 13px;
+  border-radius: 8px;
+  transition: transform .4s;
+}
+.skills__lista li:hover {
+  transform: scale(1.06);
+}
+
+.skills__lista img {
+  object-fit: contain;
+  height: 2.9rem;
+  width: 2.9rem;
+  margin-right: 10px;
+}
+
+
 #contact {
   display: flex;
   align-items: center;
@@ -593,7 +607,6 @@ body {
 }
 
 @keyframes emailSend {
-
   0%,
   95%,
   100% {
@@ -832,12 +845,12 @@ body {
     font-size: 19px;
   }
 
-  .subtitle {
+  .title {
     font-size: 45px;
     margin: 0 0 20px;
   }
 
-  .subtitle::after {
+  .title::after {
     width: 124px;
   }
 
